[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Upgrades/First.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Upgrades/Info Tab.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Upgrades/Upgrades.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.541176, 0.298039, 0.298039, 1 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Misc/Font/Raleway-SemiBold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = SubResource( 5 )

[node name="Upgrades" type="Panel" groups=["SaveNode"]]
margin_right = 1600.0
margin_bottom = 900.0
script = ExtResource( 3 )

[node name="First" type="Panel" parent="." groups=["SaveNode"]]
margin_left = 75.0
margin_top = 75.0
margin_right = 675.0
margin_bottom = 325.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Building1" type="Button" parent="First"]
margin_left = 30.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 120.0

[node name="Building2" type="Button" parent="First"]
margin_left = 170.0
margin_top = 20.0
margin_right = 290.0
margin_bottom = 120.0

[node name="Building3" type="Button" parent="First"]
margin_left = 310.0
margin_top = 20.0
margin_right = 430.0
margin_bottom = 120.0

[node name="Building4" type="Button" parent="First"]
margin_left = 450.0
margin_top = 20.0
margin_right = 570.0
margin_bottom = 120.0

[node name="Upgrade1" type="Button" parent="First"]
margin_left = 100.0
margin_top = 135.0
margin_right = 220.0
margin_bottom = 235.0

[node name="Upgrade2" type="Button" parent="First"]
margin_left = 240.0
margin_top = 135.0
margin_right = 360.0
margin_bottom = 235.0

[node name="Upgrade3" type="Button" parent="First"]
margin_left = 380.0
margin_top = 135.0
margin_right = 500.0
margin_bottom = 235.0

[node name="Choice" type="Panel" parent="First"]
margin_right = 600.0
margin_bottom = 250.0
custom_styles/panel = SubResource( 6 )

[node name="Choice1" type="Button" parent="First/Choice"]
margin_left = 40.0
margin_top = 40.0
margin_right = 240.0
margin_bottom = 210.0

[node name="Choice2" type="Button" parent="First/Choice"]
margin_left = 360.0
margin_top = 40.0
margin_right = 560.0
margin_bottom = 210.0

[node name="Second" type="Panel" parent="."]
margin_left = 75.0
margin_top = 425.0
margin_right = 675.0
margin_bottom = 675.0
custom_styles/panel = SubResource( 1 )

[node name="Choice1" type="Panel" parent="Second"]
margin_right = 600.0
margin_bottom = 250.0
custom_styles/panel = SubResource( 7 )

[node name="Button" type="Button" parent="Second/Choice1"]
margin_left = 30.0
margin_top = 100.0
margin_right = 70.0
margin_bottom = 140.0

[node name="Button2" type="Button" parent="Second/Choice1"]
margin_left = 30.0
margin_top = 100.0
margin_right = 70.0
margin_bottom = 140.0

[node name="Choice2" type="Panel" parent="Second"]
visible = false
margin_right = 600.0
margin_bottom = 250.0
custom_styles/panel = SubResource( 7 )

[node name="Third" type="Panel" parent="."]
margin_left = 925.0
margin_top = 75.0
margin_right = 1525.0
margin_bottom = 675.0
custom_styles/panel = SubResource( 1 )

[node name="Secret" type="Panel" parent="."]
margin_left = 700.0
margin_top = 75.0
margin_right = 900.0
margin_bottom = 675.0
custom_styles/panel = SubResource( 1 )

[node name="BottomBar" type="Panel" parent="."]
margin_top = 700.0
margin_right = 1600.0
margin_bottom = 900.0
custom_styles/panel = SubResource( 2 )

[node name="Main" type="Button" parent="BottomBar"]
margin_left = 600.0
margin_top = 25.0
margin_right = 950.0
margin_bottom = 175.0
text = "Main"

[node name="Info Tab" type="Label" parent="BottomBar"]
margin_right = 1600.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 4 )
script = ExtResource( 2 )

[connection signal="mouse_exited" from="First" to="BottomBar/Info Tab" method="_on_First_mouse_exited"]
[connection signal="mouse_entered" from="First/Building1" to="BottomBar/Info Tab" method="_on_Building1_mouse_entered"]
[connection signal="pressed" from="First/Building1" to="First" method="_on_Building1_pressed"]
[connection signal="mouse_entered" from="First/Building2" to="BottomBar/Info Tab" method="_on_Building2_mouse_entered"]
[connection signal="pressed" from="First/Building2" to="First" method="_on_Building2_pressed"]
[connection signal="mouse_entered" from="First/Building3" to="BottomBar/Info Tab" method="_on_Building3_mouse_entered"]
[connection signal="pressed" from="First/Building3" to="First" method="_on_Building3_pressed"]
[connection signal="mouse_entered" from="First/Building4" to="BottomBar/Info Tab" method="_on_Building4_mouse_entered"]
[connection signal="pressed" from="First/Building4" to="First" method="_on_Building4_pressed"]
[connection signal="mouse_entered" from="First/Upgrade1" to="BottomBar/Info Tab" method="_on_Upgrade1_mouse_entered"]
[connection signal="pressed" from="First/Upgrade1" to="First" method="_on_Upgrade1_pressed"]
[connection signal="mouse_entered" from="First/Upgrade2" to="BottomBar/Info Tab" method="_on_Upgrade2_mouse_entered"]
[connection signal="pressed" from="First/Upgrade2" to="First" method="_on_Upgrade2_pressed"]
[connection signal="mouse_entered" from="First/Upgrade3" to="BottomBar/Info Tab" method="_on_Upgrade3_mouse_entered"]
[connection signal="pressed" from="First/Upgrade3" to="First" method="_on_Upgrade3_pressed"]
[connection signal="mouse_exited" from="First/Choice" to="BottomBar/Info Tab" method="_on_First_mouse_exited"]
[connection signal="mouse_entered" from="First/Choice/Choice1" to="BottomBar/Info Tab" method="_on_Choice1_mouse_entered"]
[connection signal="pressed" from="First/Choice/Choice1" to="First" method="_on_Choice1_pressed"]
[connection signal="mouse_entered" from="First/Choice/Choice2" to="BottomBar/Info Tab" method="_on_Choice2_mouse_entered"]
[connection signal="pressed" from="First/Choice/Choice2" to="First" method="_on_Choice2_pressed"]
[connection signal="pressed" from="BottomBar/Main" to="." method="_on_Main_pressed"]
